indicator-sus (0.1~ppa2~indicator3) UNRELEASED; urgency=low

  * Updating from branch, lazy loading the services.

 -- Ted Gould <ted@ubuntu.com>  Fri, 19 Jun 2009 07:25:25 -0500

indicator-sus (0.1~ppa2~indicator2) jaunty; urgency=low

  * Updating the build to make proper service files

 -- Ted Gould <ted@ubuntu.com>  Tue, 16 Jun 2009 17:16:39 -0500

indicator-sus (0.1~ppa2~indicator1) jaunty; urgency=low

  * Upstream from the indicator branch.
  * debian/control: Adding build depends on libindicator-dev,
    libdbusmenu-glib-dev and libdbusmenu-gtk-dev
  * Changing package name to indicator-sus

 -- Ted Gould <ted@ubuntu.com>  Mon, 15 Jun 2009 16:33:22 -0500

indicator-sus (0.1~ppa1) intrepid; urgency=low

  * Initial release

 -- Ted Gould <ted@ubuntu.com>  Thu, 04 Dec 2008 23:51:41 -0800