@@ -1,6 +1,8 @@
 indicator-sus (0.1~ppa2~indicator3) UNRELEASED; urgency=low
 
   * Updating from branch, lazy loading the services.
+  * debian/rules: Removing the .a/.la clutter in the install
+    directory.
 
  -- Ted Gould <ted@ubuntu.com>  Fri, 19 Jun 2009 07:25:25 -0500
 
